# pyems

./: .gitattributes  .gitignore  README.org  flake.nix  pyproject.toml  setup.py  shell.nix
examples/: coax.py  coupler.py  differential_gcpw.py  differential_gcpw_blocking_cap.py  gcpw.py  gcpw_blocking_cap.py  gcpw_bypass_cap.py  gcpw_optimize_width.py  gcpw_sma_transition.py  gcpw_sweep.py  horn-antenna.stl  horn_antenna.py  microstrip.py  microstrip_ground_keepout_sweep.py  microstrip_impedance.py  microstrip_sma_transition.py  microstrip_width_sweep.py  miter.py  no_miter.py  rect_waveguide.py  rf_via.py  rf_via_reverse.py
pyems/: automesh.py  automesh_beta.py  boundary.py  calc.py  coordinate.py  csxcad.py  feed.py  field_dump.py  fp.py  kicad.py  material.py  mesh.py  network.py  nf2ff.py  pcb.py  physical_constant.py  port.py  priority.py  probe.py  simulation.py  simulation_beta.py  structure.py  utilities.py
pyems/sims/: README.org  transmission_line.py
tests/: test_calc.py  test_coordinate.py  test_examples.py  test_structure.py  test_utilities.py
