[tool.poetry]
name = "py-ems"
version = "0.1.0"
description = "High-level python interface to OpenEMS with automatic mesh generation"
authors = ["Matt Huszagh <huszaghmatt@gmail.com>"]
packages = [
    {include = "pyems"}
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
